# Syntax-complexity-analyzer

./: README.md  main.py  pyproject.toml  requirements.txt
data/: corpus.db
src/: __init__.py  analysis_result.py  complexity_metrics.py  config.py  dependency_parser.py  main.py
src/syntax_complexity_analyzer/: __init__.py  analysis_result.py  complexity_metrics.py  corpus_search.py  dependency_parser.py  main.py
tests/: test_complexity_metrics.py  test_dependency_parser.py
