[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-complexity-tool"
version = "1.0.0"
description = "A Python tool for analyzing syntactic complexity of Russian texts"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
]

[project.scripts]
text-complexity = "src.main:main"

[tool.text-complexity]
sentence_endings = [".", "!", "?", "…"]
russian_vowels = "аеёиоуыэюя"
vowel_pattern = "[аеёиоуыэюя]"

[tool.text-complexity.readability]
base = 206.836
sentence_length = 1.52
word_length = 65.14

[tool.text-complexity.complexity_weights]
sentence_length_weight = 0.6
syllable_complexity_weight = 0.4
